--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "dotenv": "^17.2.2"
   }
 }
