--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
