--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.15.1",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
