--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -30,6 +30,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "install": "^0.13.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
