--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "firebase-admin": "^13.5.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.15.1",
+    "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
