--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@diakem/libre-link-up-api-client": "file:libre-link-up-api-client",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
