--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -26,6 +26,7 @@
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.13",
     "expo-print": "~15.0.7",
     "expo-router": "~6.0.8",
     "expo-sharing": "~14.0.7",
